# develop-tranning

./: .gitignore  README.md
ClassExamProject/: CMakeLists.txt  基于Qt的手写输入法开发思路.md  手写输入法识别测试.md
ClassExamProject/HandWirttingInput/: CMakeLists.txt  CharacterList.h  HandWirttingInput.cpp  HandWirttingInput.qrc  HandWirttingInput.ui  HttpRequestManager.cpp  MapCharList.cpp  MapEngList.cpp  MapNumList.cpp  MapNumList.h  Setting.h  Setting.ui  SugResult.cpp  Suggestion.cpp  Suggestion.h
Example/: CMakeLists.txt
LessonCode/: CMakeLists.txt
LessonCode/week01/homework/: homework0104.sln  用户说明使用书以及测试.md  程序设计说明以及实际过程当中碰到的问题以及解决方案.md
LessonCode/week01/homework/homework0104/: KJson.cpp  KJson.h  Parser.cpp  Parser.h  UpdateOutput.txt  homework0104.vcxproj  homework0104.vcxproj.filters  input.json  input.txt  mainjson.cpp  output.txt
LessonCode/week01/practice/: test01.cpp  test0102.cpp  test0102.h  test0103.cpp  test0103Schedual.h  test0103Task.h
LessonCode/week02/practice/1/: wee2-FILE-RALL.h  week2-FILE-RAII.cpp
LessonCode/week02/practice/2/: week2-shared_ptr.cpp  week2-shared_ptr.h
LessonCode/week02/practice/3/: week2-猴王.cpp
LessonCode/week02/practice/4/: week2-student-gradecount.cpp  week2-student-gradecount.h
LessonCode/week03/: CMakeLists.txt
LessonCode/week03/practice/Add_StrCmp/: CMakeLists.txt  addstrTest.cpp
LessonCode/week03/practice/Circle/: CMakeLists.txt  KCircle.h  main.cpp
LessonCode/week03/practice/CircleDLL/: CMakeLists.txt  circle.cpp  circle.h
LessonCode/week03/practice/CircleDllMain/: CMakeLists.txt
LessonCode/week03/practice/CircleMain/: CMakeLists.txt  CircleMain.cpp
LessonCode/week03/practice/CircleStaticLib/: CMakeLists.txt  KCircle.cpp
LessonCode/week03/practice/Configure/: CMakeLists.txt  Configure.cpp  Configure.h  ConfigureMain.cpp
LessonCode/week03/practice/FactorialTest/: CMakeLists.txt  factorial.cpp
LessonCode/week03/practice/TestKQueue/: CMakeLists.txt  KQueueTest.cpp  KQueueTest.h  Test.cpp
LessonCode/week03/practice/linklist/: CMakeLists.txt  linklist.cpp  linklist.h  linklistnode.cpp  linklistnode.h
LessonCode/week03/practice/linklistTest/: CMakeLists.txt  Test.cpp  linklistTest.cpp  linklistTest.h
LessonCode/week03/practice/testFixture_KQueue/: CMakeLists.txt  KQueue.cpp  KQueue.h  KQueuenode.cpp  KQueuenode.h
LessonCode/week04/: CMakeLists.txt
LessonCode/week04/homework/: homework02.sln  开发过程记录.md  测试结果说明文档.md
LessonCode/week04/homework/homework02/: AcAutomation.cpp  AcAutomation.h  homework02.vcxproj  homework02.vcxproj.filters  keyword.txt  main.cpp  threadpool3.cpp
LessonCode/week04/practice/HeroAndBoss/: CMakeLists.txt  Dragon.h  Hero.h  IObserver.h  main.cpp  (+1 more)
LessonCode/week05/: CMakeLists.txt
LessonCode/week06/: CMakeLists.txt
LessonCode/week07/: CMakeLists.txt
LessonCode/week08/: CMakeLists.txt
LessonCode/week08/homework/: ReadMe.md  基于Qt的手写输入法开发思路.md
(+79 files in other folders)
