add_subdirectory(practice/Circle)

add_subdirectory(practice/CircleStaticLib)

add_subdirectory(practice/CircleMain)

add_subdirectory(practice/CircleDLL)

add_subdirectory(practice/CircleDllMain)

add_subdirectory(practice/FactorialTest)

add_subdirectory(practice/Add_Strcmp)

add_subdirectory(practice/Configure)

add_subdirectory(practice/testFixture_KQueue)

add_subdirectory(practice/TestKQueue)

add_subdirectory(practice/linklist)

add_subdirectory(practice/linklistTest)